Primer commit: proyecto ModaRopa

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -68,7 +68,7 @@
     </p>
     <p>
         Nuestro objetivo es ayudarte a <strong>comprar ropa online</strong> de forma fácil y segura, con una cuidada relación <strong>calidad-precio</strong>, 
-        <strong>ofertas</strong> y <strong>rebajas</strong>. Usamos <strong>enlaces de afiliado de Amazon</strong>, por lo que <em>precios, stock, envíos y devoluciones</em> 
+        <strong>ofertas</strong> y <strong>rebajas</strong>. Usamos <strong>enlaces de afiliados</strong>, por lo que <em>precios, stock, envíos y devoluciones</em> 
         se gestionan directamente en Amazon, con <strong>pago seguro</strong> y <strong>entrega rápida en España</strong>.
     </p>
 
